// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters  with alt data correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="bills"
  />
  <select
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
</div>
`;

exports[`should render ExpenseListFilters correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
</div>
`;
